<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>


    <!-- Content Descriptions -->
    <string name="name_of_this_asteroid">Name of this asteroid</string>
    <string name="date_of_approach">Date of approach</string>
    <string name="dangerous_emoji">Emoji the represents if this asteroid is dangerous or normal</string>
    <string name="displays_nasa_photo_of_the_day">Displays NASA Photo Of The Day</string>
    <string name="error_alert_title">Error!</string>
    <string name="alert_positive_button">Okay</string>
    <string name="header_that_reads_image_of_the_day">Header that reads Image Of The Day</string>
    <string name="image_that_shows_an_asteroid_representing_if_this_asteroid_is_safe_or_hazardous">Image that shows an asteroid representing if this asteroid is safe or hazardous</string>
    <string name="header_that_reads_close_approach_date">Header that reads close approach date</string>
    <string name="the_close_approach_date_of_this_asteroid">The close approach date of this asteroid</string>
    <string name="header_that_reads_absolute_magnitude">Header that reads absolute magnitude</string>
    <string name="the_absolute_magnitude_of_this_asteroid">The absolute magnitude of this asteroid</string>
    <string name="clickable_icon_button_that_displays_a_dialog_box_defining_astronomical_unit">Clickable icon button that displays a dialog box defining Astronomical Unit</string>
    <string name="header_that_reads_estimated_diameter">Header that reads Estimated Diameter</string>
    <string name="the_estimated_diameter_of_this_asteroid">The estimated diameter of this asteroid</string>
    <string name="header_that_reads_relative_velocity">Header that reads Relative Velocity</string>
    <string name="the_relative_velocity_of_this_asteroid">The relative velocity of this asteroid</string>
    <string name="header_that_reads_distance_from_earth">Header that reads Distance From Earth</string>
    <string name="this_asteroids_distance_from_earth">This asteroids distance from earth</string>

</resources>
