<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.data.model.domain.Asteroid" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/large_padding">

        <TextView
            style="@style/AsteroidName"
            android:id="@+id/codename_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{asteroid.codename}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/date_textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="68347 (2001 KB67)"
            android:contentDescription="@string/name_of_this_asteroid"/>

        <TextView
            android:id="@+id/date_textView"
            style="@style/AsteroidDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{asteroid.closeApproachDate}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codename_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="2021-03-23"
            android:contentDescription="@string/date_of_approach"/>

        <ImageView
            android:id="@+id/potential_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:statusIcon="@{asteroid.potentiallyHazardous}"
            tools:src="@drawable/ic_status_potentially_hazardous"
            android:contentDescription="@string/dangerous_emoji"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>